--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat:wght@400;700&family=Bree+Serif&display=swap" rel="stylesheet">
 
+<!--
+Light Yellow: ffdb49
+Middle Yellow: fed12f
+Dark Yellow: ffc501
+-->
+
     <script>
         function loadPartial(url, elementId) {
             fetch(url)
