--- a/pitch-deck copy.html
+++ b/pitch-deck copy.html
@@ -35,49 +35,17 @@
         }
 
         #pdf-container {
-            position: relative;
-            padding-bottom: 56.25%; /* 16:9 aspect ratio */
-            height: 0;
-            overflow: hidden;
-            max-width: 100%;
+            position: fixed;
+            top: 56px; /* Adjusted to account for the navbar height */
+            left: 0;
+            right: 0;
+            bottom: 0;
         }
 
         #pdf-viewer {
-            position: absolute;
-            top: 0;
-            left: 0;
             width: 100%;
             height: 100%;
             border: none;
-        }
-
-        #mobile-message {
-            display: none;
-            text-align: center;
-            padding: 20px;
-            background-color: #333;
-            margin-top: 20px;
-            border-radius: 5px;
-        }
-
-        .btn-primary {
-            background-color: #224bb2;
-            border-color: #224bb2;
-        }
-
-        .btn-primary:hover {
-            background-color: #405996;
-            border-color: #405996;
-        }
-
-        @media (max-width: 768px) {
-            #pdf-container {
-                display: none;
-            }
-
-            #mobile-message {
-                display: block;
-            }
         }
     </style>
 </head>
@@ -109,16 +77,8 @@
             </div>
         </div>
     </nav>
-
-    <div class="container mt-4">
-        <h1>Juliette's Miracle Pitch Deck</h1>
-        <div id="pdf-container">
-            <iframe id="pdf-viewer" src="images/PitchDeck.pdf"></iframe>
-        </div>
-        <div id="mobile-message">
-            <p>For the best experience on mobile devices, please download the pitch deck PDF:</p>
-            <a href="images/PitchDeck.pdf" class="btn btn-primary" download>Download Pitch Deck PDF</a>
-        </div>
+    <div id="pdf-container">
+        <iframe id="pdf-viewer" src="images/PitchDeck.pdf"></iframe>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
