--- a/index.html
+++ b/index.html
@@ -7,12 +7,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat:wght@400;700&family=Bree+Serif&display=swap" rel="stylesheet">
 
-<!--
-Light Yellow: ffdb49
-Middle Yellow: fed12f
-Dark Yellow: ffc501
--->
-
     <script>
         function loadPartial(url, elementId) {
             fetch(url)
@@ -31,59 +25,63 @@ Dark Yellow: ffc501
     <style>
         body {
             font-family: 'Montserrat', sans-serif;
-            color: #fff;
-            background-color: #000;
+            color: #000; /* Changed to black */
+            background: rgb(255,219,73);
+            background: radial-gradient(circle, rgba(255,219,73,1) 15%, rgba(254,209,47,1) 50%, rgba(255,197,1,1) 75%);
         }
 
         h1, h2, h3, h4, h5, h6 {
             font-family: 'Lobster', cursive;
-            color: #FFD700; /* Gold, keeping headers gold for contrast */
+            color: #000; /* Changed to black */
         }
 
         .navbar {
-            background-color: #111; /* Slightly lighter than the body for subtle contrast */
+            background-color: rgba(255, 255, 255, 0.1); /* Semi-transparent white */
         }
 
         #tagline {
             font-family: 'Bree Serif', serif;
             font-size: 1.5rem;
             text-align: center;
-            color: #FFD700; /* Keeping gold for visibility */
+            color: #000; /* Changed to black */
             margin: 2rem 0;
         }
 
-        /* Adjust link colors for better visibility on dark background */
         a {
-            color: #FFD700; /* Gold */
+            color: #000; /* Changed to black */
         }
 
         a:hover {
-            color: #FFA500; /* Orange, for hover effect */
+            color: #333; /* Darker shade for hover effect */
         }
 
-        /* Adjust the footer colors */
         footer {
-            background-color: #111; /* Slightly lighter than the body */
+            background-color: rgba(0, 0, 0, 0.1); /* Semi-transparent black */
         }
 
         footer a {
-            color: #FFD700 !important; /* Gold, important to override Bootstrap styles */
+            color: #000 !important; /* Changed to black */
         }
 
         footer a:hover {
-            color: #FFA500 !important; /* Orange, for hover effect */
+            color: #333 !important; /* Darker shade for hover effect */
         }
+
         .navbar-brand, .nav-link {
-            color: #FFD700 !important; /* Gold */
+            color: #000 !important; /* Changed to black */
         }
+
         .btn-primary {
             background-color: #224bb2; /* Blue */
             border-color: #224bb2;
+            color: #fff; /* White text for contrast */
         }
+
         .btn-primary:hover {
             background-color: #405996;
             border-color: #405996;
         }
+
         #hero {
             background-image: url('images/JMOSN_homepage.jpg');
             background-size: cover;
@@ -98,16 +96,16 @@ Dark Yellow: ffc501
         }
 
         #hero .container {
-            transform: translateY(-100px); /* Adjust the value as needed */
+            transform: translateY(-100px);
         }
 
         #hero h1 {
-            font-size: 2.5rem; /* Base size for mobile */
+            font-size: 2.5rem;
             text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
         }
 
         #hero p {
-            font-size: 1.5rem; /* Base size for mobile */
+            font-size: 1.5rem;
             font-weight: bold;
             margin-top: 1rem;
         }
@@ -116,11 +114,17 @@ Dark Yellow: ffc501
             #hero p {
                 font-size: 1.5rem;
             }
+            #hero h1 {
+                font-size: 4rem;
+            }
         }
 
         @media (min-width: 992px) {
             #hero p {
                 font-size: 2rem;
+            }
+            #hero h1 {
+                font-size: 5rem;
             }
         }
 
@@ -128,32 +132,13 @@ Dark Yellow: ffc501
             #hero p {
                 font-size: 2.5rem;
             }
-        }
-
-        #tagline {
-            font-family: 'Bree Serif', serif;
-            font-size: 1.5rem;
-            text-align: center;
-            color: #ffffff; /* White */
-            margin: 2rem 0;
-        }
-        @media (min-width: 768px) {
-            #hero h1 {
-                font-size: 4rem;
-            }
-        }
-        @media (min-width: 992px) {
-            #hero h1 {
-                font-size: 5rem;
-            }
-        }
-        @media (min-width: 1200px) {
             #hero h1 {
                 font-size: 6rem;
             }
         }
     </style>
 </head>
+
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
