--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,68 +8,53 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat:wght@400;700&family=Bree+Serif&display=swap" rel="stylesheet">
 
-    <script>
-        function loadPartial(url, elementId) {
-            fetch(url)
-                .then(response => response.text())
-                .then(data => {
-                    document.getElementById(elementId).innerHTML = data;
-                });
-            }
-
-            document.addEventListener('DOMContentLoaded', function() {
-                loadPartial('header.html', 'header-partial');
-                loadPartial('footer.html', 'footer-partial');
-        });
-    </script>
-
     <style>
         body {
             font-family: 'Montserrat', sans-serif;
-            color: #000; /* Changed to black */
+            color: #000;
             background: rgb(255,219,73);
             background: radial-gradient(circle, #ffdb49 15%, #fed12f 50%, #ffc501 75%);
         }
 
         h1, h2, h3, h4, h5, h6 {
             font-family: 'Lobster', cursive;
-            color: #000; /* Changed to black */
+            color: #000;
         }
 
         .navbar {
-            background-color: rgba(255, 255, 255, 0.1); /* Semi-transparent white */
+            background-color: rgba(255, 255, 255, 0.1);
         }
 
         #tagline {
             font-family: 'Bree Serif', serif;
             font-size: 1.5rem;
             text-align: center;
-            color: #000; /* Changed to black */
+            color: #000;
             margin: 2rem 0;
         }
 
         a {
-            color: #000; /* Changed to black */
+            color: #000;
         }
 
         a:hover {
-            color: #333; /* Darker shade for hover effect */
+            color: #333;
         }
 
         footer {
-            background-color: rgba(0, 0, 0, 0.1); /* Semi-transparent black */
+            background-color: rgba(0, 0, 0, 0.1);
         }
 
         footer a {
-            color: #000 !important; /* Changed to black */
+            color: #000 !important;
         }
 
         footer a:hover {
-            color: #333 !important; /* Darker shade for hover effect */
+            color: #333 !important;
         }
 
         .navbar-brand, .nav-link {
-            color: #000 !important; /* Changed to black */
+            color: #000 !important;
         }
 
         .navbar-toggler-icon {
@@ -80,9 +66,9 @@
         }
         
         .btn-primary {
-            background-color: #00195a; /* Blue */
+            background-color: #00195a;
             border-color: #00195a;
-            color: #fff; /* White text for contrast */
+            color: #fff;
         }
 
         .btn-primary:hover {
@@ -110,14 +96,14 @@
         #hero h1 {
             font-size: 2.5rem;
             text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
-            color: #fed12f; /* Changed to yellow */
+            color: #fed12f;
         }
 
         #hero p {
             font-size: 1.5rem;
             font-weight: bold;
             margin-top: 1rem;
-            color: #fff; /* Explicitly set to white to ensure it doesn't inherit the yellow color */
+            color: #fff;
         }
 
         @media (min-width: 768px) {
@@ -125,7 +111,7 @@
                 font-size: 1.5rem;
             }
             #hero h1 {
-                font-size: 6rem;
+                font-size: 5rem;
             }
         }
 
@@ -134,7 +120,7 @@
                 font-size: 2rem;
             }
             #hero h1 {
-                font-size: 8rem;
+                font-size: 7rem;
             }
         }
 
@@ -143,13 +129,14 @@
                 font-size: 2.5rem;
             }
             #hero h1 {
-                font-size: 10rem;
+                font-size: 9rem;
             }
         }
     </style>
 </head>
 
 <body>
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
             <a class="navbar-brand" href="#">Juliette's Miracle on St. Nick</a>
@@ -159,19 +146,19 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#home">Home</a>
+                        <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#about">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#cast-crew">Cast & Crew</a>
+                        <a class="nav-link" href="events.html">Events</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="pitch-deck.html">Pitch Deck</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact</a>
+                        <a class="nav-link" href="gallery.html">Gallery</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -196,7 +183,7 @@
 
         <section id="cast-crew" class="mb-5">
             <h2>Cast & Crew</h2>
-            <p>Information about the cast and crew will be available soon.</p>
+            <p>Information about the cast and crew can be viewed in the pitch deck.</p>
         </section>
 
         <section id="pitch-deck" class="mb-5">
@@ -211,6 +198,7 @@
         </section>
     </main>
 
+    <!-- Footer -->
     <footer class="bg-dark text-light py-4">
         <div class="container">
             <div class="row">
@@ -218,8 +206,8 @@
                     <p>&copy; 2024 Juliette's Miracle on St. Nick. All rights reserved.</p>
                 </div>
                 <div class="col-md-6 text-md-end">
-                    <a href="#" class="text-light me-3">Privacy Policy</a>
-                    <a href="#" class="text-light">Terms of Use</a>
+                    <a href="privacy-policy.html" class="text-light me-3">Privacy Policy</a>
+                    <a href="terms-of-use.html" class="text-light">Terms of Use</a>
                 </div>
             </div>
         </div>
