--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
-            <a class="navbar-brand" href="#">Juliette's Miracle on St. Nick</a>
+            <a class="navbar-brand" href="index.html">Juliette's Miracle on St. Nick</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
