--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,7 @@
             background: radial-gradient(circle, #ffdb49 15%, #fed12f 50%, #ffc501 75%);
             display: flex;
             flex-direction: column;
+            padding-top: 20px; /* Add padding to account for fixed navbar */
         }
 
         h1, h2, h3, h4, h5, h6 {
