--- a/events.html
+++ b/events.html
@@ -17,6 +17,7 @@
             display: flex;
             flex-direction: column;
             min-height: 100vh;
+            padding-top: 20px; /* Add padding to account for fixed navbar */
         }
 
         h1, h2, h3, h4, h5, h6 {
