--- a/gallery.html
+++ b/gallery.html
@@ -37,6 +37,7 @@
         color: #000;
         background: rgb(255,219,73);
         background: radial-gradient(circle, #ffdb49 15%, #fed12f 50%, #ffc501 75%);
+        padding-top: 20px; /* Add padding to account for fixed navbar */
         }
 
         h1, h2, h3, h4, h5, h6 {
