first EVENTS update

--- a/events.html
+++ b/events.html
@@ -264,6 +264,17 @@
 
         <div class="row mb-4">
             <div class="col-12">
+                <div class="event-card darker-overlay" style="background-image: url('images/NewSwingCity_WorldMap.webp');">
+                    <p class="event-date">Saturday, July 13th at 7:30 PM</p>
+                    <h2 class="event-title">Trouble in New Swing City</h2>
+                    <p>Join us for a night of fun roleplaying with "Trouble in New Swing City!"</p>
+                    <!-- <a href="#" class="btn btn-primary">Register</a> -->
+                </div>
+            </div>
+        </div>
+
+        <div class="row mb-4">
+            <div class="col-12">
                 <div class="event-card" style="background-image: url('images/actors_pw.jpg');">
                     <p class="event-date">Date TBA</p>
                     <h2 class="event-title">Creators' Master Class</h2>
@@ -271,18 +282,7 @@
                     <!-- <a href="#" class="btn btn-primary">RSVP</a> -->
                 </div>
             </div>
-        </div>
-
-        <div class="row mb-4">
-            <div class="col-12">
-                <div class="event-card darker-overlay" style="background-image: url('images/NewSwingCity_WorldMap.webp');">
-                    <p class="event-date">Date TBA</p>
-                    <h2 class="event-title">Trouble in New Swing City</h2>
-                    <p>Join us for a night of fun roleplaying with "Trouble in New Swing City!"</p>
-                    <!-- <a href="#" class="btn btn-primary">Register</a> -->
-                </div>
-            </div>
-        </div>
+        </div>        
     </main>
 
     <!-- Footer -->
