Navbar, added press, removed events from nav, added seedspark to nav

--- a/pitch-deck.html
+++ b/pitch-deck.html
@@ -92,16 +92,19 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="events.html">Events</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="pitch-deck.html">Pitch Deck</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="gallery.html">Gallery</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
+                        <a class="nav-link" href="press.html">Press</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://seedandspark.com/fund/juliettes-miracle-on-st-nick" target="_blank">Seed&Spark</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
