--- a/index.html
+++ b/index.html
@@ -162,16 +162,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="events.html">Events</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="pitch-deck.html">Pitch Deck</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="gallery.html">Gallery</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
+                        <a class="nav-link" href="press.html">Press</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://seedandspark.com/fund/juliettes-miracle-on-st-nick" target="_blank">Seed&Spark</a>
                     </li>
                 </ul>
             </div>
@@ -185,8 +185,28 @@
         </div>
     </section>
 
+    
+    
     <main class="container my-5">
         <p id="tagline">A poignant exploration of love, legacy, and the fleeting nature of life</p>
+
+        <section id="support-campaign" class="text-center my-5">
+            <div class="container">
+                <h2>Support Our Film</h2>
+                <p>We are raising funds to bring "Juliette's Miracle on St. Nick" to life. Your contribution can make a big difference!</p>
+                <a href="https://seedandspark.com/fund/juliettes-miracle-on-st-nick" class="btn btn-primary btn-lg">Donate on Seed&Spark</a>
+            </div>
+        </section>
+
+        <!-- <section id="support-campaign" class="text-center my-5">
+            <div class="container">
+                <h2>Support Our Film</h2>
+                <p>We are raising funds to bring "Juliette's Miracle on St. Nick" to life. Your contribution can make a big difference!</p>
+                <div class="embed-responsive embed-responsive-16by9">
+                    <iframe src="https://seedandspark.com/fund/juliettes-miracle-on-st-nick" width="100%" height="600px" frameborder="0" allowfullscreen></iframe>
+                </div>
+            </div>
+        </section> -->
 
         <section id="about" class="mb-5">
             <h2>About the Film</h2>
