--- a/index.html
+++ b/index.html
@@ -154,29 +154,33 @@
 <body>
     <!-- Navbar -->
     <nav id="navbar" class="navbar navbar-expand-lg">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">Juliette's Miracle on St. Nick</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="pitch-deck.html">Pitch Deck</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="gallery.html">Gallery</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="press.html">Press</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://seedandspark.com/fund/juliettes-miracle-on-st-nick" target="_blank">Seed&Spark</a>
-                    </li>
-                </ul>
+        <nav id="navbar" class="navbar navbar-expand-lg">
+            <div class="container">
+                <a class="navbar-brand" href="index.html">Juliette's Miracle on St. Nick</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="pitch-deck.html">Pitch Deck</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="gallery.html">Gallery</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="press.html">Press</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://seedandspark.com/fund/juliettes-miracle-on-st-nick" target="_blank">Seed&Spark</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="contact.html">Contact</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
+        </nav>
 
     <section id="hero">
         <div class="container">
