--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
                 </div>
             </div>
         </nav>
+    </nav>
 
     <section id="hero">
         <div class="container">
